<resources>
    <string name="app_name">SUWIKI</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- 스플래시 화면 -->
    <string name="start_loading_timetable">서버로부터 시간표 DB 불러오는 중</string>
    <string name="start_storing_timetable">시간표 DB 저장 중</string>
    <string name="start_version_checking">시간표 DB 버전 확인 중</string>
    <string name="start_version_check_complete">시간표 DB 버전 확인 완료</string>
    <string name="start_version_check_fail">시간표 DB 버전 확인 실패</string>

    <string name="timetable">시간표</string>
    <string name="evaluation">강의평가</string>
    <string name="more">더보기</string>
    <string name="my_account">내 계정</string>
    <string name="school_email">학교 인증 메일</string>
    <string name="my_evaluate">내 글 관리</string>
    <string name="my_point">현재 보유 포인트</string>
    <string name="search_evaluation_hint">강의명, 교수명으로 원하는 강의평가를 찾아보세요!</string>
    <string name="see_more"><u>더보기 ></u></string>
    <string name="search_result">강의평가 검색</string>
    <string name="sort">정렬</string>
    <string name="satisfaction">만족도</string>
    <string name="honey">꿀강</string>
    <string name="learning">배움</string>
    <string name="date">날짜</string>
    <string name="total">종합</string>
    <string name="report">신고</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="slash5">/5</string>
    <string name="honey_score">꿀강지수</string>
    <string name="learning_score">배움지수</string>
    <string name="team_meeting">조모임</string>
    <string name="task">과제</string>
    <string name="grade">학점비율</string>
    <string name="add">추가</string>
    <string name="complete">완료</string>
    <string name="write_evaluation">강의평가 작성 +10P</string>
    <string name="lecture_evaluation">강의평가</string>
    <string name="exam_info">시험정보</string>
    <string name="write_exam">시험정보 작성 +20P</string>
    <string name="use_point">포인트 사용</string>
    <string name="edit_evaluation">강의평가 수정</string>

    <!-- My Page -->
    <string name="notice">공지사항</string>
    <string name="my_page">내 정보</string>
    <string name="send_feedback">피드백 전송</string>
    <string name="question">문의하기</string>
    <string name="change_password">비밀번호 변경</string>
    <string name="terms_of_use">이용 약관</string>
    <string name="privacy_policy">개인정보 처리 방침</string>
    <string name="sign_out">회원 탈퇴</string>
    <string name="opensource_licence">오픈소스 라이선스</string>
    <string name="see_detail"><u>자세히</u></string>
    <string name="average_index">평균 지수</string>
    <string name="see_short"><u>간략히</u></string>
    <string name="no_exam_info">등록된 시험정보가 없어요</string>
    <string name="show_exam_info">시험 정보 열람시</string>
    <string name="exam_point">20포인트</string>
    <string name="need">가 차감됩니다.</string>
    <string name="no_data">아직 등록된 강의평가가 없습니다.</string>
    <string name="suspension_history_not_exists">이용 제한 내역이 없습니다</string>
    <string name="evaluation_not_exists">강의평가가 없습니다.</string>

    <!-- Login & Sign in -->
    <string name="login">로그인</string>
    <string name="password">비밀번호</string>
    <string name="sign_in">회원 가입</string>
    <string name="id">아이디</string>
    <string name="keep_login">로그인 유지</string>
    <string name="require_id">아이디 입력</string>
    <string name="require_password">비밀번호(영문, 숫자, 특수문자 조합 8~20자)</string>
    <string name="require_password_again">비밀번호 다시 입력</string>
    <string name="find_id">아이디 찾기</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="login_button_text">로그인</string>
    <string name="login_id">로그인 아이디</string>
    <string name="login_to_check_point">포인트를 확인하려면 로그인하세요</string>
    <string name="need_login">로그인이 필요합니다</string>
    <string name="school_domain">\@suwon.ac.kr</string>
    <string name="go_to_mail_homepage">학교 메일 홈페이지로 이동</string>
    <string name="invalid_id">아이디가 올바르지 않습니다</string>
    <string name="invalid_pw">문자, 숫자, 특수 문자를 조합하세요</string>
    <string name="login_fail">로그인 실패</string>
    <string name="invalid_pw_again">비밀번호와 일치하지 않습니다</string>
    <string name="unchecked_term">약관이 동의되어야 합니다</string>
    <string name="check_mail">메일 확인하기</string>
    <string name="terms_title">약관에 동의합니다.</string>
    <string name="terms">약관에 동의시 Suwiki 이용약관 및 개인정보처리방침에 동의하게 됩니다.</string>
    <string name="hint_send_link_to_email">학교 메일로 인증 링크를 전송합니다.</string>
    <string name="text_check_id_btn">중복확인</string>

    <!-- Data binding -->
    <string name="my_evaluation_count">작성한 강의평가</string>
    <string name="my_exam_info_count">작성한 시험정보</string>
    <string name="opened_exam_count">시험정보 열람 횟수</string>
    <string name="total_point">%d P</string>
    <string name="detail_point_positive">+%dP</string>
    <string name="detail_point">%dP</string>
    <string name="signup_welcome_message">가입을 환영합니다</string>
    <string name="signup_welcome_info">"<b>"%s@suwon.ac.kr"</b>"로 링크를 발송했습니다. 로그인을 위해서 이메일로 발송된 인증 링크를 클릭해주세요.</string>
    <string name="floatToStr">%.1f</string>
    <string name="notice_date_format">%d.%d.%d</string>
    <string name="suspension_created_at">제한 일시 : %s</string>
    <string name="suspension_expired_at">제한 기간 : %s까지 (%d일)</string>
    <string name="suspension_judgement">제한 기간 : %s까지 (%d일)</string>

    <string name="setting">설정</string>
    <string name="add_timetable">시간표 추가</string>
    <string name="timtable_list">시간표 목록</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">회원 탈퇴</string>
    <string name="welcome">반갑습니다!</string>
    <string name="check_id_length">6자 이상 입력하세요</string>
    <string name="check_pw_length">8자 이상 입력하세요</string>
    <string name="has_blank">빈 칸이 있습니다</string>
    <string name="back_to_list">목록</string>

    <string name="btn_back">뒤로</string>
    <string name="btn_next">다음</string>
    <string name="btn_previous">이전</string>
    <string name="btn_exit">닫기</string>

    <!-- write -->
    <string name="write_lecture_info">완료 (+10P)</string>
    <string name="write_exam_info">완료 (+20P)</string>
    <string name="sel_year">수강학기 선택</string>
    <string name="score">점</string>
    <string name="exist">있음</string>
    <string name="not_exist">없음</string>
    <string name="normal">보통</string>
    <string name="many">많음</string>
    <string name="picky">까다로움</string>
    <string name="good">너그러움</string>
    <string name="genealogy">족보</string>
    <string name="textbook">교재</string>
    <string name="ppt">PPT</string>
    <string name="note">필기</string>
    <string name="application">응용</string>
    <string name="practice">실습</string>
    <string name="veryDifficult">매우 어려움</string>
    <string name="difficult">어려움</string>
    <string name="easy">쉬움</string>
    <string name="veryEasy">매우 쉬움</string>

    <!--common-->
    <string name="hyphen">-</string>
    <string name="email_string">학교 인증 메일</string>
    <string name="reset_password">비밀번호 변경</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="webview_close_button_description">webview_close_button</string>
    <string name="SUWIKI_WEB">https://suwiki.netlify.app/</string>
    <string name="hint_contact_us_content">문의 내용</string>
    <string name="hint_contact_us_title">제목</string>
    <string name="hint_contact_us_button">보내기</string>
    <string name="text_item_my_exam_info_difficulty">난이도</string>
    <string name="title_item_my_exam_info_exam_type">시험유형</string>
    <string name="title_item_my_exam_info_lecture_name">강의 이름</string>
    <string name="app_logo">app logo</string>
    <string name="hint_input_school_email">학교 이메일 입력</string>
    <string name="hint_input_SWLE_id">SUWIKI 아이디 입력</string>
    <string name="hint_find_pw">학교 메일로 임시 비밀번호를 전송합니다.</string>

    <string name="title_activity_welcome_sign_up">WelcomeSignUpActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_point_system_guide">포인트 제도 안내</string>
    <string name="dash">-</string>
    <string name="point_guide_1">다른 계정으로 학교 인증 시 해당 계정으로 포인트가 합산 되며, 기존 계정의 포인트는 초기화 됩니다.</string>
    <string name="point_guide_2">포인트 획득을 위해 허위/중복/성의없는 정보를 작성할 경우, 서비스 이용이 영구 제한될 수 있습니다.</string>
    <string name="point_guide_3">허위 신고를 남용하는 이용자 또한 제재가 가해질 수 있습니다.</string>
    <string name="title_obtain_point">포인트 획득</string>
    <string name="title_obtain_point_write_evaluation">- 강의평 작성: </string>
    <string name="title_obtain_point_share_exam_info">- 시험정보 공유 : </string>
    <string name="title_obtain_point_report">- 신고 보상 : </string>
    <string name="title_deduct_point">포인트 차감</string>
    <string name="title_deduct_point_open_exam_info">- 시험정보 조회 : </string>
    <string name="title_deduct_point_deletion_post">- 강의평가/시험정보 삭제 : </string>
    <string name="title_guidance">이용 안내</string>
    <string name="suspension_history">이용 제한 내역</string>
    <string name="purchase_history">구매 이력</string>

    <string name="open_major">개설학과</string>
    <string name="simple_see_more">더보기</string>
    <string name="recent_lecture">최근 올라온 강의</string>
    <string name="lecture_honey">꿀 강의</string>
    <string name="lecture_satisfaction">만족도가 높은 강의</string>
    <string name="lecture_learning">배울게 많은 강의</string>
    <string name="lecture_best">BEST 강의</string>
    <string name="search_open_major">개설 학과를 검색하세요</string>
    <string name="all">전체</string>
    <string name="bookmark">즐겨찾기</string>
    <string name="okay">확인</string>
    <string name="no_search_result">\'%s\'에 대한\n검색결과가 없습니다.</string>
    <string name="use_after_login">로그인 후 사용할 수 있습니다!</string>
    <string name="search_evaluation">강의평가 검색</string>
    <string name="no_evaluation_data">아직 등록된 강의평가가 없습니다.</string>
    <string name="no_exam_data">아직 등록된 시험정보가 없습니다.</string>
    <string name="use_point_20p">포인트 사용하기 -20P</string>
    <string name="detail_info">과목 상세</string>
    <string name="no_search_data">검색결과가 없습니다.</string>
    <string name="test_type">시험유형</string>
    <string name="write_lecture">강의평가 작성</string>
    <string name="course_semester">수강학기</string>
    <string name="test_kind">시험종류</string>
    <string name="my_post">내가 쓴 글</string>
    <string name="hint_signup_id">아이디 입력(영문 6~20자)</string>
    <string name="description_close_button">닫기 버튼</string>
    <string name="no_timetable">시간표가 없습니다.</string>
    <string name="crate_timetable">시간표 생성</string>
    <string name="finish">완료</string>
    <string name="year">년</string>
    <string name="semester">학기</string>
    <string name="timetable_list">시간표 목록</string>
    <string name="add_class">수업 추가</string>
    <string name="search_class">수업 검색</string>
    <string name="class_info">수업 정보</string>
    <string name="enroll">등록</string>
    <string name="text_require_login">내가 쓴 글과 포인트를\n확인하려면 로그인하세요.</string>
    <string name="exam_info_not_exists">시험정보가 없습니다.</string>
    <string name="purchase_history_not_exists">구매이력이 없습니다.</string>
    <string name="notice_not_exists">공지사항이 없습니다</string>
    <string name="sign_up_verify_email_notice">* 이메일 인증 시 주의 사항\n -웹메일이 휴면 상태인지 확인해주세요.\n -웹메일 계정은 포털 계정과 다르니 이 부분 주의 바랍니다.</string>

    <!-- uswtimetable -->
    <string name="elearning_format">"%s (%s %s~%s)"</string>
    <string name="add_class_directly">직접 추가</string>

    <!-- evaluation -->
    <string name="evaluation_category_recent">최근 올라온 강의</string>
    <string name="evaluation_category_honey">꿀 강의</string>
    <string name="evaluation_category_satisfaction">만족도가 높은 강의</string>
    <string name="evaluation_category_learnable">배울게 많은 강의</string>
    <string name="evaluation_category_best">Best 강의</string>
</resources>