<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/bg_rounded_border_line_15_gray_500"
        style="@style/exam_type_layout_style">

        <TextView
            android:id="@+id/usePointText1"
            style="@style/SuwikiTextSubTitle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_exam_info"
            app:layout_constraintBottom_toTopOf="@+id/usePointText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/usePointText2"
            style="@style/SuwikiTextSubTitle.Bold.Blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exam_point"
            android:textColor="@color/custom_blue"
            app:layout_constraintEnd_toStartOf="@id/usePointText3"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usePointText1"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/usePointText3"
            style="@style/SuwikiTextSubTitle.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/usePointText2"
            app:layout_constraintTop_toBottomOf="@id/usePointText1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/usePointBtn"
            style="@style/SuwikiSecondaryButton.Small"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/use_point_20p"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usePointText2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>