<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.kunize.uswtimetable.ui.search_result.SearchResultViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.search_result.SearchResultFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/searchResultAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar style="@style/scroll_enter_always_toolbar_style">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/page_padding">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView"
                        style="@style/cardview_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView29">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/search_result_bar">

                            <EditText
                                android:id="@+id/et_search"
                                style="@style/search_style"
                                android:background="@android:color/transparent"
                                android:hint="@string/search_evaluation_hint"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/btn_search"
                                app:layout_constraintHorizontal_chainStyle="packed"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <ImageView
                                android:id="@+id/btn_search"
                                android:layout_width="wrap_content"
                                android:layout_height="0dp"
                                android:paddingStart="10dp"
                                android:paddingEnd="10dp"
                                android:src="@drawable/ic_baseline_search_24"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/et_search"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="@id/textView31"
                        app:layout_constraintStart_toEndOf="@id/textView31"
                        app:layout_constraintTop_toTopOf="@id/textView31">

                        <RadioButton
                            android:id="@+id/dateBtn"
                            style="@style/sort_radiobutton_style"
                            radioBtnClicked="@{viewModel.radioButtons.get(0)}"
                            android:text="@string/date" />

                        <RadioButton
                            android:id="@+id/honeyBtn"
                            style="@style/sort_radiobutton_style"
                            radioBtnClicked="@{viewModel.radioButtons.get(1)}"
                            android:text="@string/honey" />

                        <RadioButton
                            android:id="@+id/satisfactionBtn"
                            style="@style/sort_radiobutton_style"
                            radioBtnClicked="@{viewModel.radioButtons.get(2)}"
                            android:text="@string/satisfaction" />

                        <RadioButton
                            android:id="@+id/learningBtn"
                            style="@style/sort_radiobutton_style"
                            radioBtnClicked="@{viewModel.radioButtons.get(3)}"
                            android:text="@string/learning" />

                        <RadioButton
                            android:id="@+id/totalBtn"
                            style="@style/sort_radiobutton_style"
                            radioBtnClicked="@{viewModel.radioButtons.get(4)}"
                            android:text="@string/total" />
                    </RadioGroup>

                    <TextView
                        android:id="@+id/textView31"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/sort"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cardView" />

                    <TextView
                        android:id="@+id/textView29"
                        style="@style/title_textview_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_result"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.cardview.widget.CardView
            style="@style/cardview_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/page_padding"
            android:layout_marginEnd="@dimen/page_padding"
            android:layout_marginBottom="@dimen/page_padding"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                style="@style/no_data_textview_style"
                android:visibility="@{viewModel.commonRecyclerViewViewModel.itemList.empty ? View.VISIBLE : View.GONE}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerSearchResult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:evaluationList="@{viewModel.commonRecyclerViewViewModel.itemList}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </androidx.cardview.widget.CardView>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>